parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EPSILON
    ISA
    TYPE

Grammar

Rule 0     S' -> prog
Rule 1     prog -> buildClassOrFunc
Rule 2     buildClassOrFunc -> classDecl
Rule 3     buildClassOrFunc -> funcDef
Rule 4     classDecl -> CLASS ID LEFTBRACE visibilityMemberDeclArr RIGHTBRACE
Rule 5     visibilityMemberDeclArr -> visibilityMemberDecl visibilityMemberDeclArr
Rule 6     visibilityMemberDeclArr -> <empty>
Rule 7     visibilityMemberDecl -> visibility memberDecl
Rule 8     visibility -> PUBLIC
Rule 9     visibility -> PRIVATE
Rule 10    visibility -> <empty>
Rule 11    memberDecl -> memberFuncDecl
Rule 12    memberDecl -> memberVarDecl
Rule 13    memberFuncDecl -> FUNCTION ID COLON LEFTPARENTHESES fParams RIGHTPARENTHESES ARROW returnType SEMICOLON
Rule 14    memberFuncDecl -> CONSTRUCTOR COLON LEFTPARENTHESES fParams RIGHTPARENTHESES SEMICOLON
Rule 15    memberVarDecl -> ATTRIBUTE ID COLON type arraySizeArr SEMICOLON
Rule 16    arraySizeArr -> arraySize arraySizeArr
Rule 17    arraySizeArr -> <empty>
Rule 18    funcDef -> funcHead funcBody
Rule 19    funcHead -> FUNCTION idsrArr ID LEFTPARENTHESES fParams RIGHTPARENTHESES ARROW returnType
Rule 20    funcHead -> FUNCTION ID SR CONSTRUCTOR LEFTPARENTHESES fParams RIGHTPARENTHESES
Rule 21    idsrArr -> ID SR idsrArr
Rule 22    idsrArr -> <empty>
Rule 23    funcBody -> LEFTBRACKET localVarDeclOrStmtArr RIGHTBRACKET
Rule 24    localVarDeclOrStmtArr -> localVarDeclOrStmt localVarDeclOrStmtArr
Rule 25    localVarDeclOrStmtArr -> <empty>
Rule 26    localVarDeclOrStmt -> localVarDecl
Rule 27    localVarDeclOrStmt -> statement
Rule 28    localVarDecl -> LOCALVAR ID COLON type arraySizeArr SEMICOLON
Rule 29    localVarDecl -> LOCALVAR ID COLON type LEFTPARENTHESES aParams RIGHTPARENTHESES SEMICOLON
Rule 30    statement -> assignStat SEMICOLON
Rule 31    statement -> IF LEFTPARENTHESES relExpr RIGHTPARENTHESES THEN statBlock ELSE statBlock SEMICOLON
Rule 32    statement -> WHILE LEFTPARENTHESES relExpr RIGHTPARENTHESES statBlock SEMICOLON
Rule 33    statement -> READ LEFTPARENTHESES variable RIGHTPARENTHESES SEMICOLON
Rule 34    statement -> WRITE LEFTPARENTHESES expr RIGHTPARENTHESES SEMICOLON
Rule 35    statement -> RETURN LEFTPARENTHESES expr RIGHTPARENTHESES SEMICOLON
Rule 36    statement -> functionCall SEMICOLON
Rule 37    assignStat -> variable ASSIGN expr
Rule 38    statBlock -> LEFTBRACE statementArr RIGHTBRACE
Rule 39    statBlock -> statement
Rule 40    statementArr -> statement statementArr
Rule 41    statementArr -> <empty>
Rule 42    expr -> arithExpr
Rule 43    expr -> relExpr
Rule 44    relExpr -> arithExpr relOp arithExpr
Rule 45    arithExpr -> term arithExprtail
Rule 46    arithExprtail -> addOp term arithExprtail
Rule 47    arithExprtail -> <empty>
Rule 48    term -> factor termTail
Rule 49    termTail -> multOp factor termTail
Rule 50    termTail -> <empty>
Rule 51    factor -> variable
Rule 52    factor -> functionCall
Rule 53    factor -> INTLIT
Rule 54    factor -> FLOATLIT
Rule 55    factor -> LEFTPARENTHESES arithExpr RIGHTPARENTHESES
Rule 56    factor -> NOT factor
Rule 57    factor -> sign factor
Rule 58    variable -> idnestArr ID indiceArr
Rule 59    idnestArr -> idnest indiceArr
Rule 60    idnestArr -> <empty>
Rule 61    indiceArr -> indice indiceArr
Rule 62    indiceArr -> <empty>
Rule 63    functionCall -> idnestArr ID LEFTPARENTHESES aParams RIGHTPARENTHESES
Rule 64    indice -> LEFTBRACE arithExpr RIGHTBRACE
Rule 65    returnType -> type
Rule 66    returnType -> VOID
Rule 67    fParams -> ID COLON type arraySizeArr fParamsTailArr
Rule 68    fParams -> <empty>
Rule 69    fParamsTailArr -> fParamsTail fParamsTailArr
Rule 70    fParamsTailArr -> <empty>
Rule 71    aParams -> expr aParamsTailArr
Rule 72    aParams -> <empty>
Rule 73    aParamsTailArr -> expr aParamsTailArr
Rule 74    aParamsTailArr -> <empty>
Rule 75    relOp -> EQ
Rule 76    relOp -> NEQ
Rule 77    relOp -> LT
Rule 78    relOp -> GT
Rule 79    relOp -> LEQ
Rule 80    relOp -> GEQ
Rule 81    addOp -> ADD
Rule 82    addOp -> SUB
Rule 83    addOp -> OR
Rule 84    multOp -> MUL
Rule 85    multOp -> DIV
Rule 86    multOp -> AND
Rule 87    type -> INTEGER
Rule 88    type -> FLOAT
Rule 89    type -> ID
Rule 90    arraySize -> LEFTBRACE INTLIT RIGHTBRACE
Rule 91    arraySize -> LEFTBRACE RIGHTBRACE
Rule 92    sign -> ADD
Rule 93    sign -> SUB
Rule 94    idnest -> ID idnestTail
Rule 95    idnestTail -> <empty>
Rule 96    idnestTail -> LEFTBRACE arithExpr RIGHTBRACE idnestTail
Rule 97    idnestTail -> LEFTPARENTHESES aParams RIGHTPARENTHESES idnestTail
Rule 98    idnestTail -> DOT
Rule 99    fParamsTail -> COMMA ID COLON type arraySizeArr fParamsTail
Rule 100   fParamsTail -> <empty>
Rule 101   empty -> <empty>

Terminals, with rules where they appear

ADD                  : 81 92
AND                  : 86
ARROW                : 13 19
ASSIGN               : 37
ATTRIBUTE            : 15
CLASS                : 4
COLON                : 13 14 15 28 29 67 99
COMMA                : 99
CONSTRUCTOR          : 14 20
DIV                  : 85
DOT                  : 98
ELSE                 : 31
EPSILON              : 
EQ                   : 75
FLOAT                : 88
FLOATLIT             : 54
FUNCTION             : 13 19 20
GEQ                  : 80
GT                   : 78
ID                   : 4 13 15 19 20 21 28 29 58 63 67 89 94 99
IF                   : 31
INTEGER              : 87
INTLIT               : 53 90
ISA                  : 
LEFTBRACE            : 4 38 64 90 91 96
LEFTBRACKET          : 23
LEFTPARENTHESES      : 13 14 19 20 29 31 32 33 34 35 55 63 97
LEQ                  : 79
LOCALVAR             : 28 29
LT                   : 77
MUL                  : 84
NEQ                  : 76
NOT                  : 56
OR                   : 83
PRIVATE              : 9
PUBLIC               : 8
READ                 : 33
RETURN               : 35
RIGHTBRACE           : 4 38 64 90 91 96
RIGHTBRACKET         : 23
RIGHTPARENTHESES     : 13 14 19 20 29 31 32 33 34 35 55 63 97
SEMICOLON            : 13 14 15 28 29 30 31 32 33 34 35 36
SR                   : 20 21
SUB                  : 82 93
THEN                 : 31
TYPE                 : 
VOID                 : 66
WHILE                : 32
WRITE                : 34
error                : 

Nonterminals, with rules where they appear

aParams              : 29 63 97
aParamsTailArr       : 71 73
addOp                : 46
arithExpr            : 42 44 44 55 64 96
arithExprtail        : 45 46
arraySize            : 16
arraySizeArr         : 15 16 28 67 99
assignStat           : 30
buildClassOrFunc     : 1
classDecl            : 2
empty                : 
expr                 : 34 35 37 71 73
fParams              : 13 14 19 20
fParamsTail          : 69 99
fParamsTailArr       : 67 69
factor               : 48 49 56 57
funcBody             : 18
funcDef              : 3
funcHead             : 18
functionCall         : 36 52
idnest               : 59
idnestArr            : 58 63
idnestTail           : 94 96 97
idsrArr              : 19 21
indice               : 61
indiceArr            : 58 59 61
localVarDecl         : 26
localVarDeclOrStmt   : 24
localVarDeclOrStmtArr : 23 24
memberDecl           : 7
memberFuncDecl       : 11
memberVarDecl        : 12
multOp               : 49
prog                 : 0
relExpr              : 31 32 43
relOp                : 44
returnType           : 13 19
sign                 : 57
statBlock            : 31 31 32
statement            : 27 39 40
statementArr         : 38 40
term                 : 45 46
termTail             : 48 49
type                 : 15 28 29 65 67 99
variable             : 33 37 51
visibility           : 7
visibilityMemberDecl : 5
visibilityMemberDeclArr : 4 5

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . buildClassOrFunc
    (2) buildClassOrFunc -> . classDecl
    (3) buildClassOrFunc -> . funcDef
    (4) classDecl -> . CLASS ID LEFTBRACE visibilityMemberDeclArr RIGHTBRACE
    (18) funcDef -> . funcHead funcBody
    (19) funcHead -> . FUNCTION idsrArr ID LEFTPARENTHESES fParams RIGHTPARENTHESES ARROW returnType
    (20) funcHead -> . FUNCTION ID SR CONSTRUCTOR LEFTPARENTHESES fParams RIGHTPARENTHESES

    CLASS           shift and go to state 5
    FUNCTION        shift and go to state 7

    prog                           shift and go to state 1
    buildClassOrFunc               shift and go to state 2
    classDecl                      shift and go to state 3
    funcDef                        shift and go to state 4
    funcHead                       shift and go to state 6

state 1

    (0) S' -> prog .



state 2

    (1) prog -> buildClassOrFunc .

    $end            reduce using rule 1 (prog -> buildClassOrFunc .)


state 3

    (2) buildClassOrFunc -> classDecl .

    $end            reduce using rule 2 (buildClassOrFunc -> classDecl .)


state 4

    (3) buildClassOrFunc -> funcDef .

    $end            reduce using rule 3 (buildClassOrFunc -> funcDef .)


state 5

    (4) classDecl -> CLASS . ID LEFTBRACE visibilityMemberDeclArr RIGHTBRACE

    ID              shift and go to state 8


state 6

    (18) funcDef -> funcHead . funcBody
    (23) funcBody -> . LEFTBRACKET localVarDeclOrStmtArr RIGHTBRACKET

    LEFTBRACKET     shift and go to state 10

    funcBody                       shift and go to state 9

state 7

    (19) funcHead -> FUNCTION . idsrArr ID LEFTPARENTHESES fParams RIGHTPARENTHESES ARROW returnType
    (20) funcHead -> FUNCTION . ID SR CONSTRUCTOR LEFTPARENTHESES fParams RIGHTPARENTHESES
    (21) idsrArr -> . ID SR idsrArr
    (22) idsrArr -> .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 12

  ! ID              [ reduce using rule 22 (idsrArr -> .) ]

    idsrArr                        shift and go to state 11

state 8

    (4) classDecl -> CLASS ID . LEFTBRACE visibilityMemberDeclArr RIGHTBRACE

    LEFTBRACE       shift and go to state 13


state 9

    (18) funcDef -> funcHead funcBody .

    $end            reduce using rule 18 (funcDef -> funcHead funcBody .)


state 10

    (23) funcBody -> LEFTBRACKET . localVarDeclOrStmtArr RIGHTBRACKET
    (24) localVarDeclOrStmtArr -> . localVarDeclOrStmt localVarDeclOrStmtArr
    (25) localVarDeclOrStmtArr -> .
    (26) localVarDeclOrStmt -> . localVarDecl
    (27) localVarDeclOrStmt -> . statement
    (28) localVarDecl -> . LOCALVAR ID COLON type arraySizeArr SEMICOLON
    (29) localVarDecl -> . LOCALVAR ID COLON type LEFTPARENTHESES aParams RIGHTPARENTHESES SEMICOLON
    (30) statement -> . assignStat SEMICOLON
    (31) statement -> . IF LEFTPARENTHESES relExpr RIGHTPARENTHESES THEN statBlock ELSE statBlock SEMICOLON
    (32) statement -> . WHILE LEFTPARENTHESES relExpr RIGHTPARENTHESES statBlock SEMICOLON
    (33) statement -> . READ LEFTPARENTHESES variable RIGHTPARENTHESES SEMICOLON
    (34) statement -> . WRITE LEFTPARENTHESES expr RIGHTPARENTHESES SEMICOLON
    (35) statement -> . RETURN LEFTPARENTHESES expr RIGHTPARENTHESES SEMICOLON
    (36) statement -> . functionCall SEMICOLON
    (37) assignStat -> . variable ASSIGN expr
    (63) functionCall -> . idnestArr ID LEFTPARENTHESES aParams RIGHTPARENTHESES
    (58) variable -> . idnestArr ID indiceArr
    (59) idnestArr -> . idnest indiceArr
    (60) idnestArr -> .
    (94) idnest -> . ID idnestTail

  ! shift/reduce conflict for ID resolved as shift
    RIGHTBRACKET    reduce using rule 25 (localVarDeclOrStmtArr -> .)
    LOCALVAR        shift and go to state 18
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    READ            shift and go to state 23
    WRITE           shift and go to state 25
    RETURN          shift and go to state 26
    ID              shift and go to state 19

  ! ID              [ reduce using rule 60 (idnestArr -> .) ]

    localVarDeclOrStmtArr          shift and go to state 14
    localVarDeclOrStmt             shift and go to state 15
    localVarDecl                   shift and go to state 16
    statement                      shift and go to state 17
    assignStat                     shift and go to state 20
    variable                       shift and go to state 24
    functionCall                   shift and go to state 27
    idnestArr                      shift and go to state 28
    idnest                         shift and go to state 29

state 11

    (19) funcHead -> FUNCTION idsrArr . ID LEFTPARENTHESES fParams RIGHTPARENTHESES ARROW returnType

    ID              shift and go to state 30


state 12

    (20) funcHead -> FUNCTION ID . SR CONSTRUCTOR LEFTPARENTHESES fParams RIGHTPARENTHESES
    (21) idsrArr -> ID . SR idsrArr

    SR              shift and go to state 31


state 13

    (4) classDecl -> CLASS ID LEFTBRACE . visibilityMemberDeclArr RIGHTBRACE
    (5) visibilityMemberDeclArr -> . visibilityMemberDecl visibilityMemberDeclArr
    (6) visibilityMemberDeclArr -> .
    (7) visibilityMemberDecl -> . visibility memberDecl
    (8) visibility -> . PUBLIC
    (9) visibility -> . PRIVATE
    (10) visibility -> .

    RIGHTBRACE      reduce using rule 6 (visibilityMemberDeclArr -> .)
    PUBLIC          shift and go to state 35
    PRIVATE         shift and go to state 36
    FUNCTION        reduce using rule 10 (visibility -> .)
    CONSTRUCTOR     reduce using rule 10 (visibility -> .)
    ATTRIBUTE       reduce using rule 10 (visibility -> .)

    visibilityMemberDeclArr        shift and go to state 32
    visibilityMemberDecl           shift and go to state 33
    visibility                     shift and go to state 34

state 14

    (23) funcBody -> LEFTBRACKET localVarDeclOrStmtArr . RIGHTBRACKET

    RIGHTBRACKET    shift and go to state 37


state 15

    (24) localVarDeclOrStmtArr -> localVarDeclOrStmt . localVarDeclOrStmtArr
    (24) localVarDeclOrStmtArr -> . localVarDeclOrStmt localVarDeclOrStmtArr
    (25) localVarDeclOrStmtArr -> .
    (26) localVarDeclOrStmt -> . localVarDecl
    (27) localVarDeclOrStmt -> . statement
    (28) localVarDecl -> . LOCALVAR ID COLON type arraySizeArr SEMICOLON
    (29) localVarDecl -> . LOCALVAR ID COLON type LEFTPARENTHESES aParams RIGHTPARENTHESES SEMICOLON
    (30) statement -> . assignStat SEMICOLON
    (31) statement -> . IF LEFTPARENTHESES relExpr RIGHTPARENTHESES THEN statBlock ELSE statBlock SEMICOLON
    (32) statement -> . WHILE LEFTPARENTHESES relExpr RIGHTPARENTHESES statBlock SEMICOLON
    (33) statement -> . READ LEFTPARENTHESES variable RIGHTPARENTHESES SEMICOLON
    (34) statement -> . WRITE LEFTPARENTHESES expr RIGHTPARENTHESES SEMICOLON
    (35) statement -> . RETURN LEFTPARENTHESES expr RIGHTPARENTHESES SEMICOLON
    (36) statement -> . functionCall SEMICOLON
    (37) assignStat -> . variable ASSIGN expr
    (63) functionCall -> . idnestArr ID LEFTPARENTHESES aParams RIGHTPARENTHESES
    (58) variable -> . idnestArr ID indiceArr
    (59) idnestArr -> . idnest indiceArr
    (60) idnestArr -> .
    (94) idnest -> . ID idnestTail

  ! shift/reduce conflict for ID resolved as shift
    RIGHTBRACKET    reduce using rule 25 (localVarDeclOrStmtArr -> .)
    LOCALVAR        shift and go to state 18
    IF              shift and go to state 21
    WHILE           shift and go to state 22
    READ            shift and go to state 23
    WRITE           shift and go to state 25
    RETURN          shift and go to state 26
    ID              shift and go to state 19

  ! ID              [ reduce using rule 60 (idnestArr -> .) ]

    localVarDeclOrStmt             shift and go to state 15
    localVarDeclOrStmtArr          shift and go to state 38
    localVarDecl                   shift and go to state 16
    statement                      shift and go to state 17
    assignStat                     shift and go to state 20
    variable                       shift and go to state 24
    functionCall                   shift and go to state 27
    idnestArr                      shift and go to state 28
    idnest                         shift and go to state 29

state 16

    (26) localVarDeclOrStmt -> localVarDecl .

    LOCALVAR        reduce using rule 26 (localVarDeclOrStmt -> localVarDecl .)
    IF              reduce using rule 26 (localVarDeclOrStmt -> localVarDecl .)
    WHILE           reduce using rule 26 (localVarDeclOrStmt -> localVarDecl .)
    READ            reduce using rule 26 (localVarDeclOrStmt -> localVarDecl .)
    WRITE           reduce using rule 26 (localVarDeclOrStmt -> localVarDecl .)
    RETURN          reduce using rule 26 (localVarDeclOrStmt -> localVarDecl .)
    ID              reduce using rule 26 (localVarDeclOrStmt -> localVarDecl .)
    RIGHTBRACKET    reduce using rule 26 (localVarDeclOrStmt -> localVarDecl .)


state 17

    (27) localVarDeclOrStmt -> statement .

    LOCALVAR        reduce using rule 27 (localVarDeclOrStmt -> statement .)
    IF              reduce using rule 27 (localVarDeclOrStmt -> statement .)
    WHILE           reduce using rule 27 (localVarDeclOrStmt -> statement .)
    READ            reduce using rule 27 (localVarDeclOrStmt -> statement .)
    WRITE           reduce using rule 27 (localVarDeclOrStmt -> statement .)
    RETURN          reduce using rule 27 (localVarDeclOrStmt -> statement .)
    ID              reduce using rule 27 (localVarDeclOrStmt -> statement .)
    RIGHTBRACKET    reduce using rule 27 (localVarDeclOrStmt -> statement .)


state 18

    (28) localVarDecl -> LOCALVAR . ID COLON type arraySizeArr SEMICOLON
    (29) localVarDecl -> LOCALVAR . ID COLON type LEFTPARENTHESES aParams RIGHTPARENTHESES SEMICOLON

    ID              shift and go to state 39


state 19

    (94) idnest -> ID . idnestTail
    (95) idnestTail -> .
    (96) idnestTail -> . LEFTBRACE arithExpr RIGHTBRACE idnestTail
    (97) idnestTail -> . LEFTPARENTHESES aParams RIGHTPARENTHESES idnestTail
    (98) idnestTail -> . DOT

  ! shift/reduce conflict for LEFTBRACE resolved as shift
    ID              reduce using rule 95 (idnestTail -> .)
    LEFTBRACE       shift and go to state 41
    LEFTPARENTHESES shift and go to state 42
    DOT             shift and go to state 43

  ! LEFTBRACE       [ reduce using rule 95 (idnestTail -> .) ]

    idnestTail                     shift and go to state 40

state 20

    (30) statement -> assignStat . SEMICOLON

    SEMICOLON       shift and go to state 44


state 21

    (31) statement -> IF . LEFTPARENTHESES relExpr RIGHTPARENTHESES THEN statBlock ELSE statBlock SEMICOLON

    LEFTPARENTHESES shift and go to state 45


state 22

    (32) statement -> WHILE . LEFTPARENTHESES relExpr RIGHTPARENTHESES statBlock SEMICOLON

    LEFTPARENTHESES shift and go to state 46


state 23

    (33) statement -> READ . LEFTPARENTHESES variable RIGHTPARENTHESES SEMICOLON

    LEFTPARENTHESES shift and go to state 47


state 24

    (37) assignStat -> variable . ASSIGN expr

    ASSIGN          shift and go to state 48


state 25

    (34) statement -> WRITE . LEFTPARENTHESES expr RIGHTPARENTHESES SEMICOLON

    LEFTPARENTHESES shift and go to state 49


state 26

    (35) statement -> RETURN . LEFTPARENTHESES expr RIGHTPARENTHESES SEMICOLON

    LEFTPARENTHESES shift and go to state 50


state 27

    (36) statement -> functionCall . SEMICOLON

    SEMICOLON       shift and go to state 51


state 28

    (63) functionCall -> idnestArr . ID LEFTPARENTHESES aParams RIGHTPARENTHESES
    (58) variable -> idnestArr . ID indiceArr

    ID              shift and go to state 52


state 29

    (59) idnestArr -> idnest . indiceArr
    (61) indiceArr -> . indice indiceArr
    (62) indiceArr -> .
    (64) indice -> . LEFTBRACE arithExpr RIGHTBRACE

    ID              reduce using rule 62 (indiceArr -> .)
    LEFTBRACE       shift and go to state 55

    indiceArr                      shift and go to state 53
    indice                         shift and go to state 54

state 30

    (19) funcHead -> FUNCTION idsrArr ID . LEFTPARENTHESES fParams RIGHTPARENTHESES ARROW returnType

    LEFTPARENTHESES shift and go to state 56


state 31

    (20) funcHead -> FUNCTION ID SR . CONSTRUCTOR LEFTPARENTHESES fParams RIGHTPARENTHESES
    (21) idsrArr -> ID SR . idsrArr
    (21) idsrArr -> . ID SR idsrArr
    (22) idsrArr -> .

  ! shift/reduce conflict for ID resolved as shift
    CONSTRUCTOR     shift and go to state 58
    ID              shift and go to state 57

  ! ID              [ reduce using rule 22 (idsrArr -> .) ]

    idsrArr                        shift and go to state 59

state 32

    (4) classDecl -> CLASS ID LEFTBRACE visibilityMemberDeclArr . RIGHTBRACE

    RIGHTBRACE      shift and go to state 60


state 33

    (5) visibilityMemberDeclArr -> visibilityMemberDecl . visibilityMemberDeclArr
    (5) visibilityMemberDeclArr -> . visibilityMemberDecl visibilityMemberDeclArr
    (6) visibilityMemberDeclArr -> .
    (7) visibilityMemberDecl -> . visibility memberDecl
    (8) visibility -> . PUBLIC
    (9) visibility -> . PRIVATE
    (10) visibility -> .

    RIGHTBRACE      reduce using rule 6 (visibilityMemberDeclArr -> .)
    PUBLIC          shift and go to state 35
    PRIVATE         shift and go to state 36
    FUNCTION        reduce using rule 10 (visibility -> .)
    CONSTRUCTOR     reduce using rule 10 (visibility -> .)
    ATTRIBUTE       reduce using rule 10 (visibility -> .)

    visibilityMemberDecl           shift and go to state 33
    visibilityMemberDeclArr        shift and go to state 61
    visibility                     shift and go to state 34

state 34

    (7) visibilityMemberDecl -> visibility . memberDecl
    (11) memberDecl -> . memberFuncDecl
    (12) memberDecl -> . memberVarDecl
    (13) memberFuncDecl -> . FUNCTION ID COLON LEFTPARENTHESES fParams RIGHTPARENTHESES ARROW returnType SEMICOLON
    (14) memberFuncDecl -> . CONSTRUCTOR COLON LEFTPARENTHESES fParams RIGHTPARENTHESES SEMICOLON
    (15) memberVarDecl -> . ATTRIBUTE ID COLON type arraySizeArr SEMICOLON

    FUNCTION        shift and go to state 65
    CONSTRUCTOR     shift and go to state 66
    ATTRIBUTE       shift and go to state 67

    memberDecl                     shift and go to state 62
    memberFuncDecl                 shift and go to state 63
    memberVarDecl                  shift and go to state 64

state 35

    (8) visibility -> PUBLIC .

    FUNCTION        reduce using rule 8 (visibility -> PUBLIC .)
    CONSTRUCTOR     reduce using rule 8 (visibility -> PUBLIC .)
    ATTRIBUTE       reduce using rule 8 (visibility -> PUBLIC .)


state 36

    (9) visibility -> PRIVATE .

    FUNCTION        reduce using rule 9 (visibility -> PRIVATE .)
    CONSTRUCTOR     reduce using rule 9 (visibility -> PRIVATE .)
    ATTRIBUTE       reduce using rule 9 (visibility -> PRIVATE .)


state 37

    (23) funcBody -> LEFTBRACKET localVarDeclOrStmtArr RIGHTBRACKET .

    $end            reduce using rule 23 (funcBody -> LEFTBRACKET localVarDeclOrStmtArr RIGHTBRACKET .)


state 38

    (24) localVarDeclOrStmtArr -> localVarDeclOrStmt localVarDeclOrStmtArr .

    RIGHTBRACKET    reduce using rule 24 (localVarDeclOrStmtArr -> localVarDeclOrStmt localVarDeclOrStmtArr .)


state 39

    (28) localVarDecl -> LOCALVAR ID . COLON type arraySizeArr SEMICOLON
    (29) localVarDecl -> LOCALVAR ID . COLON type LEFTPARENTHESES aParams RIGHTPARENTHESES SEMICOLON

    COLON           shift and go to state 68


state 40

    (94) idnest -> ID idnestTail .

    LEFTBRACE       reduce using rule 94 (idnest -> ID idnestTail .)
    ID              reduce using rule 94 (idnest -> ID idnestTail .)


state 41

    (96) idnestTail -> LEFTBRACE . arithExpr RIGHTBRACE idnestTail
    (45) arithExpr -> . term arithExprtail
    (48) term -> . factor termTail
    (51) factor -> . variable
    (52) factor -> . functionCall
    (53) factor -> . INTLIT
    (54) factor -> . FLOATLIT
    (55) factor -> . LEFTPARENTHESES arithExpr RIGHTPARENTHESES
    (56) factor -> . NOT factor
    (57) factor -> . sign factor
    (58) variable -> . idnestArr ID indiceArr
    (63) functionCall -> . idnestArr ID LEFTPARENTHESES aParams RIGHTPARENTHESES
    (92) sign -> . ADD
    (93) sign -> . SUB
    (59) idnestArr -> . idnest indiceArr
    (60) idnestArr -> .
    (94) idnest -> . ID idnestTail

  ! shift/reduce conflict for ID resolved as shift
    INTLIT          shift and go to state 74
    FLOATLIT        shift and go to state 75
    LEFTPARENTHESES shift and go to state 76
    NOT             shift and go to state 77
    ADD             shift and go to state 80
    SUB             shift and go to state 81
    ID              shift and go to state 19

  ! ID              [ reduce using rule 60 (idnestArr -> .) ]

    arithExpr                      shift and go to state 69
    term                           shift and go to state 70
    factor                         shift and go to state 71
    variable                       shift and go to state 72
    functionCall                   shift and go to state 73
    sign                           shift and go to state 78
    idnestArr                      shift and go to state 79
    idnest                         shift and go to state 29

state 42

    (97) idnestTail -> LEFTPARENTHESES . aParams RIGHTPARENTHESES idnestTail
    (71) aParams -> . expr aParamsTailArr
    (72) aParams -> .
    (42) expr -> . arithExpr
    (43) expr -> . relExpr
    (45) arithExpr -> . term arithExprtail
    (44) relExpr -> . arithExpr relOp arithExpr
    (48) term -> . factor termTail
    (51) factor -> . variable
    (52) factor -> . functionCall
    (53) factor -> . INTLIT
    (54) factor -> . FLOATLIT
    (55) factor -> . LEFTPARENTHESES arithExpr RIGHTPARENTHESES
    (56) factor -> . NOT factor
    (57) factor -> . sign factor
    (58) variable -> . idnestArr ID indiceArr
    (63) functionCall -> . idnestArr ID LEFTPARENTHESES aParams RIGHTPARENTHESES
    (92) sign -> . ADD
    (93) sign -> . SUB
    (59) idnestArr -> . idnest indiceArr
    (60) idnestArr -> .
    (94) idnest -> . ID idnestTail

  ! shift/reduce conflict for ID resolved as shift
    RIGHTPARENTHESES reduce using rule 72 (aParams -> .)
    INTLIT          shift and go to state 74
    FLOATLIT        shift and go to state 75
    LEFTPARENTHESES shift and go to state 76
    NOT             shift and go to state 77
    ADD             shift and go to state 80
    SUB             shift and go to state 81
    ID              shift and go to state 19

  ! ID              [ reduce using rule 60 (idnestArr -> .) ]

    aParams                        shift and go to state 82
    expr                           shift and go to state 83
    arithExpr                      shift and go to state 84
    relExpr                        shift and go to state 85
    term                           shift and go to state 70
    factor                         shift and go to state 71
    variable                       shift and go to state 72
    functionCall                   shift and go to state 73
    sign                           shift and go to state 78
    idnestArr                      shift and go to state 79
    idnest                         shift and go to state 29

state 43

    (98) idnestTail -> DOT .

    LEFTBRACE       reduce using rule 98 (idnestTail -> DOT .)
    ID              reduce using rule 98 (idnestTail -> DOT .)


state 44

    (30) statement -> assignStat SEMICOLON .

    LOCALVAR        reduce using rule 30 (statement -> assignStat SEMICOLON .)
    IF              reduce using rule 30 (statement -> assignStat SEMICOLON .)
    WHILE           reduce using rule 30 (statement -> assignStat SEMICOLON .)
    READ            reduce using rule 30 (statement -> assignStat SEMICOLON .)
    WRITE           reduce using rule 30 (statement -> assignStat SEMICOLON .)
    RETURN          reduce using rule 30 (statement -> assignStat SEMICOLON .)
    ID              reduce using rule 30 (statement -> assignStat SEMICOLON .)
    RIGHTBRACKET    reduce using rule 30 (statement -> assignStat SEMICOLON .)
    SEMICOLON       reduce using rule 30 (statement -> assignStat SEMICOLON .)
    ELSE            reduce using rule 30 (statement -> assignStat SEMICOLON .)
    RIGHTBRACE      reduce using rule 30 (statement -> assignStat SEMICOLON .)


state 45

    (31) statement -> IF LEFTPARENTHESES . relExpr RIGHTPARENTHESES THEN statBlock ELSE statBlock SEMICOLON
    (44) relExpr -> . arithExpr relOp arithExpr
    (45) arithExpr -> . term arithExprtail
    (48) term -> . factor termTail
    (51) factor -> . variable
    (52) factor -> . functionCall
    (53) factor -> . INTLIT
    (54) factor -> . FLOATLIT
    (55) factor -> . LEFTPARENTHESES arithExpr RIGHTPARENTHESES
    (56) factor -> . NOT factor
    (57) factor -> . sign factor
    (58) variable -> . idnestArr ID indiceArr
    (63) functionCall -> . idnestArr ID LEFTPARENTHESES aParams RIGHTPARENTHESES
    (92) sign -> . ADD
    (93) sign -> . SUB
    (59) idnestArr -> . idnest indiceArr
    (60) idnestArr -> .
    (94) idnest -> . ID idnestTail

  ! shift/reduce conflict for ID resolved as shift
    INTLIT          shift and go to state 74
    FLOATLIT        shift and go to state 75
    LEFTPARENTHESES shift and go to state 76
    NOT             shift and go to state 77
    ADD             shift and go to state 80
    SUB             shift and go to state 81
    ID              shift and go to state 19

  ! ID              [ reduce using rule 60 (idnestArr -> .) ]

    relExpr                        shift and go to state 86
    arithExpr                      shift and go to state 87
    term                           shift and go to state 70
    factor                         shift and go to state 71
    variable                       shift and go to state 72
    functionCall                   shift and go to state 73
    sign                           shift and go to state 78
    idnestArr                      shift and go to state 79
    idnest                         shift and go to state 29

state 46

    (32) statement -> WHILE LEFTPARENTHESES . relExpr RIGHTPARENTHESES statBlock SEMICOLON
    (44) relExpr -> . arithExpr relOp arithExpr
    (45) arithExpr -> . term arithExprtail
    (48) term -> . factor termTail
    (51) factor -> . variable
    (52) factor -> . functionCall
    (53) factor -> . INTLIT
    (54) factor -> . FLOATLIT
    (55) factor -> . LEFTPARENTHESES arithExpr RIGHTPARENTHESES
    (56) factor -> . NOT factor
    (57) factor -> . sign factor
    (58) variable -> . idnestArr ID indiceArr
    (63) functionCall -> . idnestArr ID LEFTPARENTHESES aParams RIGHTPARENTHESES
    (92) sign -> . ADD
    (93) sign -> . SUB
    (59) idnestArr -> . idnest indiceArr
    (60) idnestArr -> .
    (94) idnest -> . ID idnestTail

  ! shift/reduce conflict for ID resolved as shift
    INTLIT          shift and go to state 74
    FLOATLIT        shift and go to state 75
    LEFTPARENTHESES shift and go to state 76
    NOT             shift and go to state 77
    ADD             shift and go to state 80
    SUB             shift and go to state 81
    ID              shift and go to state 19

  ! ID              [ reduce using rule 60 (idnestArr -> .) ]

    relExpr                        shift and go to state 88
    arithExpr                      shift and go to state 87
    term                           shift and go to state 70
    factor                         shift and go to state 71
    variable                       shift and go to state 72
    functionCall                   shift and go to state 73
    sign                           shift and go to state 78
    idnestArr                      shift and go to state 79
    idnest                         shift and go to state 29

state 47

    (33) statement -> READ LEFTPARENTHESES . variable RIGHTPARENTHESES SEMICOLON
    (58) variable -> . idnestArr ID indiceArr
    (59) idnestArr -> . idnest indiceArr
    (60) idnestArr -> .
    (94) idnest -> . ID idnestTail

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 19

  ! ID              [ reduce using rule 60 (idnestArr -> .) ]

    variable                       shift and go to state 89
    idnestArr                      shift and go to state 90
    idnest                         shift and go to state 29

state 48

    (37) assignStat -> variable ASSIGN . expr
    (42) expr -> . arithExpr
    (43) expr -> . relExpr
    (45) arithExpr -> . term arithExprtail
    (44) relExpr -> . arithExpr relOp arithExpr
    (48) term -> . factor termTail
